tests/ui/impl-trait/inference/may-define-without-must-define/reveal-auto-trait-send-inner-id-left.old.stderr
error[E0308]: mismatched types
  --> $DIR/reveal-auto-trait-send-inner-id-left.rs:37:26
   |
LL |     let _: OnWSendShow = (&&W(id2(x, ()))).show();
   |            -----------   ^^^^^^^^^^^^^^^^^^^^^^^^ expected `OnWSendShow`, found `OnWShow`
   |            |
   |            expected due to this

error[E0391]: cycle detected when computing type of opaque `Test::{opaque#0}`
  --> $DIR/reveal-auto-trait-send-inner-id-left.rs:32:13
   |
LL | type Test = impl Sized;
   |             ^^^^^^^^^^
   |
note: ...which requires type-checking `test`...
  --> $DIR/reveal-auto-trait-send-inner-id-left.rs:37:44
   |
LL |     let _: OnWSendShow = (&&W(id2(x, ()))).show();
   |                                            ^^^^
   = note: ...which requires evaluating trait selection obligation `&'a W<Test>: OnWSend`...
   = note: ...which again requires computing type of opaque `Test::{opaque#0}`, completing the cycle
note: cycle used when computing type of `Test::{opaque#0}`
  --> $DIR/reveal-auto-trait-send-inner-id-left.rs:32:13
   |
LL | type Test = impl Sized;
   |             ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0391.
For more information about an error, try `rustc --explain E0308`.
